[tool.poetry]
name = "python-concurrency-and-parallelism"
version = "0.1.0"
description = "파이썬 동시성 프로그래밍 : 데이터 수집부터 웹 개발까지 (feat. Fas를 수강하며 정리"
authors = ["herzblue <herzblue@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
requests = "^2.32.3"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
beautifulsoup4 = "^4.12.3"
odmantic = "^1.0.2"
pymongo = "^4.8.0"
flake8 = "^7.1.1"
black = "^24.8.0"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
ipykernel = "^6.29.5"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
